--- a/Wedding invitation_files/responsive.css
+++ b/Wedding invitation_files/responsive.css
@@ -517,24 +517,24 @@
 		margin: 0 12px;
 	}
 }
-@media only screen and (min-width: 400px) and (max-width: 420px)  {
-	.banner-container {
-		background-position-x: -370px;
-	}
-}
 @media only screen and (min-width: 420px) and (max-width: 500px)  {
 	.banner-container {
-		background-position-x: -350px;
+		background-position-x: -350px !important;
+	}
+}
+@media only screen and (min-width: 400px) and (max-width: 420px)  {
+	.banner-container {
+		background-position-x: -370px !important;
 	}
 }
 @media only screen and (min-width: 375px) and (max-width: 400px)  {
 	.banner-container {
-		background-position-x: -390px;
+		background-position-x: -390px !important;
 	}
   }
 @media only screen and (min-width: 300px) and (max-width: 375px)  {
 	.banner-container {
-		background-position-x: -400px;
+		background-position-x: -400px !important;
 	}
   }
 /*---------------------*/
