--- a/css/style.css
+++ b/css/style.css
@@ -245,6 +245,7 @@ h1, h2, h3, h4, h5, h6, figure {
   -moz-border-radius: 7px;
   -ms-border-radius: 7px;
   border-radius: 7px;
+  cursor: pointer;
 }
 .fh5co-video a {
   z-index: 1001;
@@ -1072,7 +1073,7 @@ form label {
   }
 }
 .couple-half h3 {
-  font-family: "Sacramento", Arial, serif;
+  font-family: Barlow;
   color: #F14E95;
   font-size: 30px;
 }
@@ -1135,6 +1136,9 @@ form label {
   }
   .title-box {
     margin-top: 10px;
+  }
+  figure > img {
+    margin-top: 30px;
   }
 }
 
@@ -1857,6 +1861,7 @@ form label {
   padding: 100px 0;
   display: block;
   box-sizing: border-box;
+  background-image: url(https://media.istockphoto.com/id/1335074792/photo/gypsophila-background-copy-space-pastel-colors-top-view-flat-layout-template-card-design.jpg?b=1&s=170667a&w=0&k=20&c=v7dgnoYGVyGb6jMgocxqLj2nXAbavPbWbBCLlnPm9Sc=);
   background-size: cover !important;
     background-repeat: no-repeat !important;
     background-position: center center !important;
@@ -1924,4 +1929,74 @@ form label {
     animation-delay: 300ms;
     animation-iteration-count: infinite;
     animation-name: pulse;
+}
+.btgbtn {
+  text-shadow: none;
+  border-radius: 30px;
+  color: #fff;
+  padding-left: 40px;
+  padding-right: 40px;
+  border: 0;
+  border-radius: 0;
+  -webkit-transition: all 0.3s;
+  -o-transition: all 0.3s;
+  transition: all 0.3s;
+  background: rgba(0,0,0,0.2);
+  padding: 12px 15px;
+  line-height: inherit;
+  vertical-align: top;
+  display: inline-block;
+  padding: 6px 12px;
+  margin-bottom: 0;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1.42857143;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: middle;
+  -ms-touch-action: manipulation;
+  touch-action: manipulation;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  background-image: none;
+  border: 1px solid transparent;
+  border-radius: 4px;
+}
+.btgbtn:hover, .btgbtn:focus, .btgbtn:active {
+  color: #6f6f6f;
+}
+
+.fh5co-couple {
+  background-color: beige;
+}
+
+::-webkit-scrollbar-track {
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	border-radius: 10px;
+	background-color: #F5F5F5;
+}
+::-webkit-scrollbar
+{
+	width: 6px;
+	background-color: #F5F5F5;
+}
+
+::-webkit-scrollbar-thumb
+{
+	border-radius: 10px;
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+	background-color: #555;
+}
+
+.fh5co-video > a {
+  top: 20% !important;
+  left: 20% !important;
+  width: 80%;
+  height: 80%;
+  background-repeat: no-repeat;
+  background-position: center center;
+  border-radius: 5% !important;
 }
