update stay and image

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -369,6 +369,8 @@ img {
   display: block;
   max-width: 100%;
   height: auto;
+  background-repeat:no-repeat;
+  background-position: center center;
 }
 
 .img-rounded {
