change en to vn text

--- a/css/style.css
+++ b/css/style.css
@@ -475,6 +475,13 @@ background-position:center !important;
   left: 50%;
   margin-left: 0px;
 }
+.fh5co-heading h2 {
+  color: darkgray !important;
+  font-family: emoji !important;
+}
+.heading-title {
+  font-size: 42px !important;
+}
 @media screen and (max-width: 480px) {
   .timeline:before {
     margin-left: -64px;
@@ -875,6 +882,7 @@ form label {
     font-size: 40px;
   }
 }
+
 @media screen and (max-width: 480px) {
   #fh5co-header .display-tc h1,
   #fh5co-counter .display-tc h1,
@@ -1159,7 +1167,9 @@ form label {
     font-size: 14px;
   }
 }
-
+.address {
+  font-size: 15px;
+}
 .feature-center {
   text-align: center;
   padding-left: 20px;
@@ -1906,7 +1916,7 @@ form label {
 .event-area .event-infobox h2 {
   font-family: "Kaushan Script", cursive;
   font-weight: 400;
-  color: #5eb141;
+  color: brown;
 }
 
 .event-infobox {
@@ -2156,4 +2166,14 @@ form label {
   .weddio-img {
     margin-bottom: 25px;
 }
+}
+@media screen and (max-width: 480px) {
+  .hi {
+     font-size: 35px !important;
+   }
+ }
+
+ .hi {
+  font-size: 60px !important;
+  padding-top: 50rem !important;
 }
