--- a/css/style.css
+++ b/css/style.css
@@ -476,7 +476,7 @@ background-position:center !important;
   margin-left: 0px;
 }
 .fh5co-heading h2 {
-  color: darkgray !important;
+  /* color: darkgray !important; */
   font-family: emoji !important;
 }
 .heading-title {
@@ -502,6 +502,13 @@ background-position:center !important;
   }
   .embename {
     margin-bottom: 20px;
+  }
+  .hi {
+    font-size: 35px !important;
+    padding-top: 15rem !important;
+  }
+  .heading-title {
+    font-size: 33px !important;
   }
 }
 .timeline > li {
@@ -738,6 +745,11 @@ background-position:center !important;
     left: 1em;
     right: 1em;
   }
+  .figure > img {
+    width: 100%;
+    padding-top: 20px;
+    padding-bottom: 20px;
+  }
 }
 #fh5co-gallery-list li a .case-studies-summary span {
   text-transform: uppercase;
@@ -858,10 +870,9 @@ form label {
   display: table-cell !important;
   vertical-align: middle;
 }
-#fh5co-header .display-tc h1, #fh5co-header .display-tc h2,
+#fh5co-header .display-tc h2,
 #fh5co-counter .display-tc h1,
 #fh5co-counter .display-tc h2,
-.fh5co-cover .display-tc h1,
 .fh5co-cover .display-tc h2 {
   margin: 0;
   padding: 0;
@@ -871,9 +882,8 @@ form label {
 #fh5co-counter .display-tc h1,
 .fh5co-cover .display-tc h1 {
   margin-bottom: 0px;
-  font-size: 100px;
   line-height: 1.5;
-  font-family: "Sacramento", Arial, serif;
+  font-family: 'Work Sans';
 }
 @media screen and (max-width: 768px) {
   #fh5co-header .display-tc h1,
@@ -882,7 +892,11 @@ form label {
     font-size: 40px;
   }
 }
-
+@media screen and (min-width: 480px) and (max-width: 768px) {
+  .hi {
+    padding-top: 35rem !important
+  }
+}
 @media screen and (max-width: 480px) {
   #fh5co-header .display-tc h1,
   #fh5co-counter .display-tc h1,
@@ -972,7 +986,7 @@ form label {
   display: inline-block;
   width: 100px;
   height: 100px;
-  background: rgba(241, 78, 149, 0.8);
+  background: #fa6f6f;
   margin: 0 4px;
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
@@ -1182,6 +1196,10 @@ form label {
   .feature-center {
     margin-bottom: 50px;
   }
+  figure > img {
+    padding-top: 20px;
+    padding-bottom: 20px;
+  }
 }
 .feature-center .icon {
   width: 90px;
@@ -1223,7 +1241,7 @@ form label {
   margin-bottom: 10px;
   line-height: 1.5;
   font-weight: bold;
-  color: #F14E95;
+  color: #fa6f6f;
   font-family: "Sacramento", Arial, serif;
 }
 @media screen and (max-width: 768px) {
@@ -2107,7 +2125,7 @@ form label {
 
 .weddio-img {
 	overflow: hidden;
-	margin-bottom: 4.2rem;
+	margin-bottom: 1.2rem;
 	-webkit-border-radius: 10px;
 	border-radius: 10px;
 }
@@ -2174,6 +2192,6 @@ form label {
  }
 
  .hi {
-  font-size: 60px !important;
-  padding-top: 50rem !important;
+  font-size: 60px ;
+  padding-top: 50rem;
 }
