--- a/css/style.css
+++ b/css/style.css
@@ -297,7 +297,7 @@ h1, h2, h3, h4, h5, h6, figure {
 }
 
 .fh5co-cover {
-  height: 900px;
+  height: 800px;
   background-repeat: no-repeat;
   position: relative;
   width: 100%;
@@ -325,7 +325,7 @@ background-position:center !important;
 }
 .fh5co-cover .display-t,
 .fh5co-cover .display-tc {
-  height: 900px;
+  height: 800px;
   display: table;
   width: 100%;
 }
@@ -477,10 +477,10 @@ background-position:center !important;
 }
 .fh5co-heading h2 {
   /* color: darkgray !important; */
-  font-family: emoji !important;
+  font-family: 'Pacifico' !important;
 }
 .heading-title {
-  font-size: 42px !important;
+  font-size: 36px !important;
 }
 .w-50 {
   width: 50%;
@@ -910,6 +910,9 @@ form label {
  .avatar-container {
   width: 80% !important;
   margin: auto;
+ }
+ .hi {
+   font-size: 40px !important;
  }
 }
 .name-style {
