--- a/css/style.css
+++ b/css/style.css
@@ -759,6 +759,9 @@ background-position:center !important;
   .event-infobox > h2 {
     font-size: 28px;
   }
+  .qr-2 {
+    margin-top: 30px !important;
+  }
 }
 #fh5co-gallery-list li a .case-studies-summary span {
   text-transform: uppercase;
@@ -2041,7 +2044,6 @@ figure > img {
   background-size: cover !important;
     background-repeat: no-repeat !important;
     background-position: center center !important;
-    height: 100vh;
 }
 
 .section-heading h2:after {
