--- a/css/style.css
+++ b/css/style.css
@@ -97,6 +97,9 @@ h1, h2, h3, h4, h5, h6, figure {
   .fh5co-nav {
     padding: 20px 0;
   }
+  .display-t > div {
+    height: 100vh !important;
+  }
 }
 .fh5co-nav #fh5co-logo {
   font-size: 30px;
@@ -492,14 +495,14 @@ background-position:center !important;
   .timeline:before {
     margin-left: -64px;
   }
-  .simply-countdown {
+  /* .simply-countdown {
     position: absolute;
     left: 50%;
     margin-right: -50%;
     transform: translate(-50%, -50%);
     bottom: 0%;
     margin-bottom: 0 !important
-  }
+  } */
   .simply-seconds-section {
     display: none !important;
   }
@@ -511,7 +514,9 @@ background-position:center !important;
   }
   .hi {
     font-size: 35px !important;
-    padding-top: 15rem !important;
+    padding-top: 100% !important;
+    padding-bottom: 8%;
+  
   }
   .heading-title {
     font-size: 33px !important;
@@ -958,7 +963,8 @@ figure > img {
 }
 @media screen and (min-width: 480px) and (max-width: 768px) {
   .hi {
-    padding-top: 35rem !important
+    padding-top: 75% !important;
+    padding-bottom: 5%;
   }
   .event-infobox > h1 {
     padding: 0 80px !important;
