--- a/css/style.css
+++ b/css/style.css
@@ -93,6 +93,13 @@ h1, h2, h3, h4, h5, h6, figure {
   padding: 40px 0;
   z-index: 1001;
 }
+
+@media screen and (min-width: 1480px) {
+  #fh5co-header {
+    background-position: top !important;
+  }
+}
+
 @media screen and (max-width: 768px) {
   .fh5co-nav {
     padding: 20px 0;
